--- a/src/components/ImageInformaitions/ImageInformations.css
+++ b/src/components/ImageInformaitions/ImageInformations.css
@@ -1,10 +1,12 @@
 .info-newalbum-container {
     position: absolute;
     top: 0;
+    left: 0;
     background-color: #fff;
     width: 100%;
     height: 100vh;
     padding: 30px 70px;
+    z-index: 100;
 }
 
 .info-newalbum-container .info-newalbum-header {
@@ -24,10 +26,15 @@
     cursor: pointer;
 }
 
+.info-newalbum-container .info-newalbum-header .send-info.active {
+    color: rgb(26, 142, 209);
+}
+
 .info-newalbum-container .info-newalbum-content {
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    background-color: #fff;
 }
 
 .info-newalbum-container .info-newalbum-content .content{
@@ -51,8 +58,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
- 
 }
+
+.info-newalbum-container .info-newalbum-content .img-container img{
+    max-width: 100%;
+    max-height: 100%;
+} 
+
 
 .info-newalbum-container .info-newalbum-content .info-container{
     display: flex;
