done === add func and fix som bug

--- a/src/components/ImageInformaitions/ImageInformations.css
+++ b/src/components/ImageInformaitions/ImageInformations.css
@@ -92,6 +92,10 @@
     margin-bottom: 8px;
 }
 
+ input::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+}
+
 .info-container .sale-options input{
     margin: 0 9px;
 }
