--- a/src/components/NewAlbumPopup/NewAlbumPopup.css
+++ b/src/components/NewAlbumPopup/NewAlbumPopup.css
@@ -106,6 +106,7 @@
     background-color: rgb(76, 150, 235);
     border-radius: 5px;
     padding: 3px 9px;
+    cursor: pointer;
 }
 
 .newalbum-content .uploaded-img{
