--- a/src/components/ImageInformaitions/ImageInformations.css
+++ b/src/components/ImageInformaitions/ImageInformations.css
@@ -5,7 +5,7 @@
     background-color: #fff;
     width: 100%;
     height: 100vh;
-    padding: 30px 70px;
+    padding: 30px 3vw;
     z-index: 100;
 }
 
@@ -37,7 +37,7 @@
     background-color: #fff;
 }
 
-.info-newalbum-container .info-newalbum-content .content{
+.info-newalbum-container .info-newalbum-content .content {
     width: 100%;
     max-width: 450px;
     min-width: 200px;
@@ -50,9 +50,8 @@
 
 .info-newalbum-container .info-newalbum-content .img-container {
     width: 100%;
-    max-width: 450px;
-    height: 450px;
-    min-width: 200px;
+    max-width: 400px;
+    height: 400px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgb(196, 194, 192);
     display: flex;
@@ -60,13 +59,28 @@
     align-items: center;
 }
 
-.info-newalbum-container .info-newalbum-content .img-container img{
+.info-newalbum-container .info-newalbum-content .img-container .image-logo-container {
+    height: 400px;
+    max-width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    box-shadow: 0 0 2px 3px rgb(196, 194, 192);
+
+}
+
+.info-newalbum-container .info-newalbum-content .image-logo-container.virtualView {
+    height: auto;
+}
+
+
+.info-newalbum-container .info-newalbum-content .img-container img {
     max-width: 100%;
-    max-height: 100%;
-} 
+}
 
 
-.info-newalbum-container .info-newalbum-content .info-container{
+.info-newalbum-container .info-newalbum-content .info-container {
     display: flex;
     flex-direction: column;
     direction: rtl;
@@ -78,29 +92,28 @@
     border-radius: 5px;
     width: 100%;
     max-width: 200px;
-    margin-top: 10px;
 }
 
-.info-container .sale-text{
+.info-container .sale-text {
     margin-bottom: 5px;
 }
 
-.info-container .sale-options{
+.info-container .sale-options {
     border-bottom: 2px dotted rgb(212, 206, 206);
     padding-bottom: 5px;
     width: 100%;
     margin-bottom: 8px;
 }
 
- input::-webkit-inner-spin-button{
+input::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
 
-.info-container .sale-options input{
+.info-container .sale-options input {
     margin: 0 9px;
 }
 
-.info-container .set-price{
+.info-container .set-price {
     display: flex;
     flex-direction: column;
     border-bottom: 2px dotted rgb(212, 206, 206);
@@ -108,23 +121,52 @@
     padding-bottom: 7px;
 }
 
-.info-container .set-price input{
+.info-container .set-price input {
     outline: none;
-    border: 1px solid  rgb(212, 206, 206);
+    border: 1px solid rgb(212, 206, 206);
     border-radius: 2px;
 }
 
-.info-container .btn-container{
+.info-container .btn-container {
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
 
-.info-container .btn-container button{
+.info-container .btn-container button {
     color: rgb(26, 142, 209);
     border: 1px solid rgb(26, 142, 209);
     border-radius: 5px;
     padding: 2px 9px;
     cursor: pointer;
     background-color: #fff;
+}
+
+@media screen and (max-width:670px) {
+
+    .info-newalbum-container .info-newalbum-content {
+        flex-direction: column;
+        align-items: center;
+        
+    }
+
+    .info-newalbum-container .info-newalbum-content .img-container,
+    .info-newalbum-container .info-newalbum-content .img-container .image-logo-container {
+        max-width: 350px;
+        height: 350px;
+    }
+
+
+}
+
+@media screen and (max-width:375px) {
+
+    .info-newalbum-container .info-newalbum-content .img-container,
+    .info-newalbum-container .info-newalbum-content .img-container .image-logo-container  {
+        max-width: 260px;
+        height: 260px;
+    }
+
+
+
 }
