Done === add cursor to logo

--- a/src/components/LogoContainer/Logo.css
+++ b/src/components/LogoContainer/Logo.css
@@ -1,12 +1,13 @@
 .logo-container {
     position: absolute;
     z-index: 100;
-    cursor: pointer;
+    cursor: grab;
 }
 
 .newalbum-content .img-container .logo-container .logo-image {
     width: 100%;
     height: auto;
+
 }
 
 
@@ -17,7 +18,11 @@
     justify-content: center;
     align-items: center;
     position: absolute;
+    cursor: grab !important;
 }
+
+
+
 
 .size-btn.top-left {
     top: -20%;
