--- a/src/components/NewAlbumPopup/NewAlbumPopup.css
+++ b/src/components/NewAlbumPopup/NewAlbumPopup.css
@@ -119,10 +119,11 @@
     position: absolute;
     top: 10px;
     right: 10px;
-    z-index: 1000;
+    z-index: 101;
     padding: 2px;
     border-radius: 50%;
     background-color: white;
+    cursor: pointer;
     width: 15px;
 }
 
