--- a/src/components/LogoContainer/Logo.css
+++ b/src/components/LogoContainer/Logo.css
@@ -4,7 +4,7 @@
     cursor: grab;
 }
 
-.newalbum-content .img-container .logo-container .logo-image {
+.logo-container .logo-image {
     width: 100%;
     height: auto;
 
